tests/007_multi_ingresses/ingress-1.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: 007-app1-ingress
  namespace: app1-ns
spec:
  ingressClassName: zproxy-ingress

  backend:
    serviceName: app1-svc
    servicePort: 80

  tls:
  - hosts:
    - 007.app1
    secretName: tls-cert

  rules:
  - host: 007.app1
    http:
      paths:
      - path: /
        backend:
          serviceName: app1-svc
          servicePort: 80
