tests/007_multi_ingresses/ingress-2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: 007-app2-ingress
  namespace: app2-ns
spec:
  ingressClassName: zproxy-ingress

  tls:
  - hosts:
    - 007.app2
    secretName: tls-cert
  - hosts:
    - 007.app2.pem.1
    - 007.app2.pem.2
    - 007.app2.pem.3
    secretName: pem-cert

  rules:
  - host: 007.app2
    http:
      paths:
      - path: /
        backend:
          serviceName: app2-svc
          servicePort: 80
