tests/007_multi_ingresses/ingress-default.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: 007-app-default-ingress
spec:
  ingressClassName: zproxy-ingress

  tls:
  - hosts:
    - 007.app.default
    secretName: tls-cert

  rules:
  - host: 007.app.default
    http:
      paths:
      - path: /
        backend:
          serviceName: app-svc
          servicePort: 80
